# gcp-flowlogs-reader

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
gcp_flowlogs_reader/: __init__.py  __main__.py  aggregation.py  gcp_flowlogs_reader.py
tests/: test_gcp_flowlogs_reader.py
