[metadata]
name = gcp_flowlogs_reader
version = 3.0.0
license = Apache
url = https://github.com/obsrvbl-oss/gcp-flowlogs-reader
description = Reader for Google Cloud VPC Flow Logs
long_description =
    This project provides a convenient interface for accessing
    VPC Flow Logs stored in Google Cloud's Stackdriver Logging service.
long_description_content_type = text/x-rst
author = Cisco Stealthwatch Cloud
author_email = support@observable.net
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.6
install_requires =
    google-cloud-logging < 4.0
    google-cloud-resource-manager
    six

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    gcp_flowlogs_reader = gcp_flowlogs_reader.__main__:main


[flake8]
max-line-length = 88
